--- a/Site.Master
+++ b/Site.Master
@@ -6,22 +6,22 @@
 <head runat="server">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta charset="utf-8" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%: Page.Title %> -DAVID'S BARBERSHOP💈✅</title>
+    <title><%: Page.Title %> -DAVID'S BARBERSHOP 💈✅</title>
 
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/bundles/modernizr") %>
     </asp:PlaceHolder>
 
     <webopt:bundlereference runat="server" path="~/Content/css" />
-    <link href="~assets/tijera.png" rel="shortcut icon" type="image/x-icon" />
+    <link href="~tijera.png" rel="shortcut icon" type="image/x-png" />
 </head>
 <body>
-    <form runat="server">
+    <form runat="server" class="wrapper">
         <asp:ScriptManager runat="server">
             <Scripts>
-                <%--To learn more about bundling z in ScriptManager see https://go.microsoft.com/fwlink/?LinkID=301884 --%>
+                <%--To learn more about bundling in ScriptManager see https://go.microsoft.com/fwlink/?LinkID=301884 --%>
                 <%--Framework Scripts--%>
                 <asp:ScriptReference Name="MsAjaxBundle" />
                 <asp:ScriptReference Name="jquery" />
@@ -40,6 +40,7 @@
 
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
             <div class="container">
+                <br />
                 <a class="navbar-brand" runat="server" href="~/">David's BarberShop</a>
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Alternar navegación" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -54,20 +55,20 @@
                 </div>
             </div>
         </nav>
-        <div class="container body-content">
+        <div class="container body-content content">
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
             <hr />
-            <footer>
-                  <div class="about">
-      <p</p>
-  </div>
-  <div class="social">
+            <footer  class="footer">
+                <div class="about">
+                    <h2>David's BarberShop</h2>
+                </div>
+                <p>Ademas de un buen corte, sabemos que nuestros clientes necesitan, una excelente atención, relajación, comodidad y confianza en un agradable ambiente 😎</p>
+                <p>&copy; <%: DateTime.Now.Year %> -  David's Barbershop. All rights reserved.</p>
+                <div class="social">
             <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a>
             <a href="https://www.instagram.com/davidsbarbershop7/" class="instagram"><i class="fab fa-instagram"></i></a>
             <a href="https://wa.me/50372048125?text=Está%20disponible???" class="whatsapp"><i class="fab fa-whatsapp"></i></a>
-  </div>
-                <p>&copy; <%: DateTime.Now.Year %> -  David's Barbershop. All rights deserveds.</p>
             </footer>
         </div>
     </form>
