--- a/Content/bootstrap.css
+++ b/Content/bootstrap.css
@@ -8215,9 +8215,9 @@ textarea.form-control-lg {
 .bg-dark {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-dark-rgb), var(--bs-bg-opacity)) !important;
-    top: 1px;
-    left: 2px;
-    height: 142px;
+    top: 23px;
+    left: -7px;
+    height: 95px;
     width: 1708px;
     margin-top: 0px;
 }
@@ -10884,3 +10884,45 @@ textarea.form-control-lg {
 }
 
 /*# sourceMappingURL=bootstrap.css.map */
+
+html, body {
+    height: 100%;
+}
+
+.wrapper {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.content {
+    flex: 1;
+}
+
+footer {
+    background-color: #f1f1f1;
+    padding: 20px;
+    text-align: center;
+}
+
+.navbar {
+    width: 100%;
+    margin: 0 auto;
+}
+    .navbar .container {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+    }
+
+.navbar-brand {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#map {
+    width: 100%;
+    height: 325px;
+    margin-bottom: 20px;
+    background-color: #e5e5e5;
+}
