--- a/Site.Master
+++ b/Site.Master
@@ -9,13 +9,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%: Page.Title %> -DAVID'S BARBERSHOP 💈✅</title>
+        <link href="~/Content/custom.css" rel="stylesheet" type="text/css" /> <!-- Añade esta línea -->
 
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/bundles/modernizr") %>
     </asp:PlaceHolder>
-
     <webopt:bundlereference runat="server" path="~/Content/css" />
-    <link href="~tijera.png" rel="shortcut icon" type="image/x-png" />
+    <link runat="server" href="~/head-icon.ico" rel="shortcut icon" type="image/x-png" />
+
 </head>
 <body>
     <form runat="server" class="wrapper">
@@ -41,11 +42,7 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
             <div class="container">
                 <br />
-                <a class="navbar-brand" runat="server" href="~/">David's BarberShop</a>
-                <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Alternar navegación" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                <a class="navbar-brand" runat="server" href="~/">David's BarberShop</a><br />
                 <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/">Inicio</a></li>
@@ -63,14 +60,15 @@
                 <div class="about">
                     <h2>David's BarberShop</h2>
                 </div>
-                <p>Ademas de un buen corte, sabemos que nuestros clientes necesitan, una excelente atención, relajación, comodidad y confianza en un agradable ambiente 😎</p>
+                <p>Ademas de un buen corte, sabemos que nuestros clientes necesitan, una excelente atención, relajación, comodidad y confianza en un agradable ambiente </p>
                 <p>&copy; <%: DateTime.Now.Year %> -  David's Barbershop. All rights reserved.</p>
                 <div class="social">
-            <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.facebook.com/DavidsBarberShop7?mibextid=ZbWKwL" class="facebook"><i class="fab fa-facebook-f"></i></a>
             <a href="https://www.instagram.com/davidsbarbershop7/" class="instagram"><i class="fab fa-instagram"></i></a>
             <a href="https://wa.me/50372048125?text=Está%20disponible???" class="whatsapp"><i class="fab fa-whatsapp"></i></a>
+            </div>
             </footer>
-        </div>
+            </div>
     </form>
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/Scripts/bootstrap.js") %>
